--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "author": "Kelvin",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "body-parser": "^1.18.3",
         "express": "^4.16.4",
-        "mongoose": "^5.3.15"
+        "jsonwebtoken": "^8.4.0",
+        "mongoose": "^5.3.15",
+        "mongoose-unique-validator": "^2.0.2"
     }
 }
